dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/mudconf.h)
AC_CONFIG_HEADER(src/autoconf.h)
AC_PROG_CC
AC_PROG_CPP
AC_ISC_POSIX
AC_MINIX
AC_HEADER_STDC 

AC_CHECK_HEADERS(memory.h unistd.h errno.h malloc.h ieeefp.h sys/select.h sys/rusage.h sys/ucontext.h)
AC_TIME_WITH_SYS_TIME
AC_FUNC_VFORK
AC_FUNC_VPRINTF
AC_HAVE_FUNCS(setrlimit getrusage timelocal mktime srandom)
AC_HAVE_FUNCS(getpagesize getdtablesize socket gethostbyaddr)
AC_HAVE_FUNCS(gettimeofday)
AC_REPLACE_FUNCS(strdup)
AC_TYPE_SIGNAL
AC_FUNC_WAIT3
AC_STRUCT_TM
AC_STRUCT_TIMEZONE
AC_TYPE_PID_T
AC_MSG_CHECKING(for union wait)
AC_TRY_COMPILE([#include <sys/wait.h>],[union wait stat;],
AC_DEFINE(HAVE_UNION_WAIT) AC_MSG_RESULT(yes), AC_MSG_RESULT(no))

AC_DECL_SYS_SIGLIST

AC_C_CONST
AC_C_CHAR_UNSIGNED
AC_C_INLINE
AC_MSG_CHECKING(for linger)
AC_TRY_COMPILE([#include <sys/socket.h>],[struct linger ling; ling.l_onoff = 1;],
AC_DEFINE(HAVE_LINGER) AC_MSG_RESULT(yes), AC_MSG_RESULT(no))

AC_CHECK_LIB(crypt, crypt)

case "$DEFS" in
*HAVE_SOCKET*)
;;
*)
AC_CHECK_LIB(socket, main) ;;
esac

case "$DEFS" in
*HAVE_GETHOSTBYADDR*)
;;
*)
AC_CHECK_LIB(inet, main) ;;
esac

AC_CHECK_LIB(nsl, main)
AC_CHECK_LIB(bsd, main)
AC_CHECK_LIB(iberty, main)
AC_CHECK_LIB(m, main)
AC_OUTPUT(Makefile)
